Add three.js on angular directive

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	<body ng-app="bomberman">
 		<main ng-view></main>
 		<script src="assets/js/utils.js"></script>
+		<script src="assets/lib/three.min.js"></script>
 		<script src="assets/lib/angular.min.js"></script>
 		<script src="assets/lib/angular-route.js"></script>
 		<script src="app/components/app.modules.js"></script>
@@ -16,5 +17,6 @@
 		<script src="app/components/handshake/handshakeController.js"></script>
 		<script src="app/components/bomberman/bombermanService.js"></script>
 		<script src="app/components/bomberman/bombermanController.js"></script>
+		<script src="app/components/bomberman/bombermanDirective.js"></script>
 	</body>
 </html>
