--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<meta name="author" content="Pablo Aguirre">
 		<link rel="stylesheet" href="assets/css/main.css">
 		<script src="assets/lib/socket.io-1.2.0.js"></script>
+		<script src="assets/lib/jquery-2.1.3.min.js"></script>
 	</head>
 	<body ng-app="bomberman">
 		<main ng-view></main>
@@ -15,6 +16,8 @@
 		<script src="app/components/app.modules.js"></script>
 		<script src="app/components/handshake/handshakeService.js"></script>
 		<script src="app/components/handshake/handshakeController.js"></script>
+		<script src="app/components/scene/sceneService.js"></script>
+		<script src="app/components/camera/cameraService.js"></script>
 		<script src="app/components/bomberman/bombermanService.js"></script>
 		<script src="app/components/bomberman/bombermanController.js"></script>
 		<script src="app/components/bomberman/bombermanDirective.js"></script>
