--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 		<script src="app/components/scene/sceneService.js"></script>
 		<script src="app/components/camera/cameraService.js"></script>
 		<script src="app/components/renderer/rendererService.js"></script>
+		<script src="app/components/map/mapService.js"></script>
 		<script src="app/components/bomberman/bombermanService.js"></script>
 		<script src="app/components/bomberman/bombermanController.js"></script>
 		<script src="app/components/bomberman/bombermanDirective.js"></script>
