--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,13 @@
 	<body ng-app="bomberman">
 		<main ng-view></main>
 		<script src="assets/js/utils.js"></script>
-		<script src="assets/lib/three.min.js"></script>
+		<script src="assets/lib/pixi.js"></script>
 		<script src="assets/lib/angular.min.js"></script>
 		<script src="assets/lib/angular-route.js"></script>
 		<script src="app/components/app.modules.js"></script>
 		<script src="app/components/handshake/handshakeService.js"></script>
 		<script src="app/components/handshake/handshakeController.js"></script>
-		<script src="app/components/scene/sceneService.js"></script>
-		<script src="app/components/camera/cameraService.js"></script>
+		<script src="app/components/stage/stageService.js"></script>
 		<script src="app/components/renderer/rendererService.js"></script>
 		<script src="app/components/map/mapService.js"></script>
 		<script src="app/components/bomberman/bombermanService.js"></script>
