Add bomb sprite

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
 		<script src="app/components/stage/stageService.js"></script>
 		<script src="app/components/renderer/rendererService.js"></script>
 		<script src="app/components/map/mapService.js"></script>
+		<script src="app/components/collision/collisionService.js"></script>
+		<script src="app/components/movement/movementService.js"></script>
+		<script src="app/components/bomb/bombService.js"></script>
 		<script src="app/components/bomberman/bombermanService.js"></script>
 		<script src="app/components/bomberman/bombermanController.js"></script>
 		<script src="app/components/bomberman/bombermanDirective.js"></script>
